@@ -1,3 +1,10 @@
+2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* Makefile.am (clib_routines): Add udivdi3, __udivdi3 and _end. Fix
+	edata into _edata.
+	(gnumach-undef): Do not remove heading _s.
+	(clib-routines.o): Add -lgcc.
+
 2007-07-09  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* i386/i386/db_interface.c (int_regs): Drop gs and fs fields.
